# internal/requests/register.go
@@ -2,5 +2,5 @@ package requests
 
 type UserRequest struct {
 	Email    string `gorm:"unique" json:"email" validate:"email"`
-	Password string `json:"-" validate:"min=4"`
+	Password string `json:"password" validate:"min=4"`
 }
